--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body {
   background-color: #1c1a19;
   color: #fff;
   font-size: 25px;
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
 .top {
@@ -20,7 +21,7 @@ body {
 }
 
 .status div {
-  margin: 16px 0 24px 21px;
+  margin: 16px 0px 24px 21px;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -33,7 +34,7 @@ body {
 }
 
 .status img {
-  margin: 17.33px 14.67px 34.33px 0;
+  margin: 17.33px 14.67px 34.33px 0px;
   width: 66.66px;
   height: 11.34px;
 }
