last unit missing in line 31. testing to check if that is the error. css file

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   font-size: 14px;
   line-height: 16px;
   text-align: center;
-  letter-spacing: -0.28px;
+  letter-spacing: -0.28;
   width: 54px;
   height: 16px;
 }
