--- a/style.css
+++ b/style.css
@@ -62,3 +62,51 @@ body {
   width: 18px;
   height: 12px;
 }
+
+.headline {
+  display: flex;
+  flex-direction: column;
+  /*align-items: center;*/
+  width: 375px;
+}
+
+.title {
+  font-family: Crete Round;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 56px;
+  line-height: 64px;
+  letter-spacing: 0.37px;
+  color: #FF6B00;
+  margin: 120px 24px 0 24px;
+  width: 327px;
+  height: 124px;
+}
+
+.profession {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FFF5E1;
+  width: 327px;
+  height: 27px;
+  margin: 12px 24px 0 24px;
+}
+
+.headline p {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #FFFFFF;
+  margin: 12px 24px 0 24px;
+}
+
+.headline img {
+  width: 200px;
+  height: 40px;
+  margin: 12px 151px 0 24px;
+}
