--- a/style.css
+++ b/style.css
@@ -537,7 +537,7 @@
 
   .second,
   .fifth {
-    background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%) url("images/secondback.png");
+    background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("images/secondback.png");
   }
 
   .second_card h4 {
@@ -573,7 +573,7 @@
 
   .third,
   .sixth {
-    background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%) url("images/thirdback.png");
+    background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("images/thirdback.png");
   }
 
   .third h4,
@@ -890,5 +890,6 @@ input:focus {
 
   .submit {
     margin-top: 0;
+    border: none;
   }
 }
