Update alt attribute in the HTML file: lines 1987-201 and 39-42 by removing the image source. Update lines 157-160 images decoration and leave alt as null. Chance CSS file. Update hover in class access_button and class submit to have a dark font and make it accessible.

--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@
   background: #fff5e1;
   border: 1px solid #f55800;
   box-sizing: border-box;
-  color: #f55800;
+  color: #000;
 }
 
 .access_button:active,
