--- a/style.css
+++ b/style.css
@@ -545,6 +545,107 @@
   outline: none;
 }
 
+/* popup window */
+
+.popup_container{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  pointer-events: none;
+  backdrop-filter: blur(5px);
+  transition-property: opacity;
+  transition-timing-function: ease-in-out;
+  transition-duration: 300ms;  
+}
+
+.appear {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.popup {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  flex-basis: 1156px;
+  flex-shrink: 1;
+  min-width: 343px;
+  max-width: 1155px;
+  margin: 24px;
+  padding: 16px;
+}
+
+.popup_desktop h3{
+  display: none;
+}
+
+.popup_desktop h2 {
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  margin-bottom: 48px;
+}
+
+.popup_desktop {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+} 
+
+.popup ul{
+  margin: 0 0 24px 0;
+}
+
+.img {
+  min-width: 311px;
+  max-width: 659px;
+  min-height: 220px;
+  max-height: 448px;
+  margin: 0;
+}
+
+.img:hover {
+  transform: scale(1.01);
+  transition-duration: 250ms;
+}
+
+.img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.popup p {
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
+  min-width: 311px;
+  margin-top: 24px;
+}
+
+.access_info {
+  margin: 0;
+  list-style: none;
+  display: flex;
+}
+
+.access_info li a {
+  display: flex;
+  margin: 16px 19px 4px 0;
+  width: fit-content;
+}
+
 @media (min-width: 774px) {
   .work {
     grid-template: auto repeat(3, 369px)/369px 369px;
@@ -626,6 +727,50 @@
   .third h4,
   .sixth h4 {
     height: 38px;
+  }
+
+  .popup_desktop h2 {
+    display: none;
+  }
+  .popup_desktop {
+    margin: 24px 38px 12px 24px;
+  } 
+    
+  .popup_desktop h3 {
+    display: block;
+    font-family: 'Crete Round', serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 32px;
+    line-height: 44px;
+    color: #172b4d;
+  }
+  .popup .languages {
+    margin: 0 0 16px 24px;
+  }
+  .popup_details {
+    display: flex;
+    padding: 24px;
+    justify-content: center;
+  }
+  .img {
+    flex-basis: 659px;
+    flex-shrink: 1;
+  }
+  .popup_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0;
+    flex-basis: 336px;
+    flex-shrink: 1;
+    margin-left: 25px;
+  }
+  .popup_info p {
+    margin: 0;
+  }
+  .popup_info .access_info {
+    margin: 0;
   }
 }
 
@@ -876,16 +1021,16 @@ input:focus {
 }
 
 /* POPUP WINDOW */
-.blur{
-  background: #66666666;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  backdrop-filter: blur(5px);
-  position: fixed;
-  display: block;
-}
+/* .blur{ */
+  /* background: #66666666; */
+  /* height: 100%; */
+  /* width: 100%; */
+  /* top: 0; */
+  /* left: 0; */
+  /* backdrop-filter: blur(5px); */
+  /* position: fixed; */
+  /* display: block; */
+/* } */
 
 @media (min-width: 780px) {
   .form {
