change the for lop for an forEach method in the js code

--- a/style.css
+++ b/style.css
@@ -608,7 +608,12 @@
 }
 
 .popup ul {
-  margin: 0 0 24px 0;
+  margin: 0 0 24px 0px;
+}
+
+.lang_li {
+  padding: 10px 12px;
+  border: 1px solid #777 ;
 }
 
 .img {
