line 62 in js code -Expected parentheses around arrow function argument  arrow-parens-

--- a/style.css
+++ b/style.css
@@ -608,12 +608,12 @@
 }
 
 .popup ul {
-  margin: 0 0 24px 0px;
+  margin: 0 0 24 0px;
 }
 
 .lang_li {
   padding: 10px 12px;
-  border: 1px solid #777 ;
+  border: 1px solid #777;
 }
 
 .img {
