--- a/style.css
+++ b/style.css
@@ -114,6 +114,15 @@
     color: #fff;
     text-decoration: none;
   }
+
+  .nav li a:hover {
+    color:#e05304;
+  }
+
+  .envelope:hover {
+    transform: scale(1.3);
+    transition-duration: 250ms;
+  }
 }
 
 .headline {
@@ -408,7 +417,8 @@
 }
 
 .access_button,
-.submit {
+.submit,
+.resume {
   width: 124px;
   height: 48px;
   margin: 0 227px 0 24px;
@@ -433,7 +443,8 @@
 }
 
 .access_button:hover,
-.submit:hover {
+.submit:hover,
+.resume:hover {
   background: #fff5e1;
   border: 1px solid #f55800;
   box-sizing: border-box;
@@ -441,7 +452,8 @@
 }
 
 .access_button:active,
-.submit:active {
+.submit:active
+.resume:active {
   background: #e05304;
   color: #f4f1f0;
 }
@@ -502,10 +514,10 @@
   margin: 0 24px;
 }
 
-.second_card:hover {
-  transform: scale(1.03);
-  transition-duration: 250ms;
-}
+/* .second_card:hover { */
+  /* transform: scale(1.03); */
+  /* transition-duration: 250ms; */
+/* } */
 
 .second_card h4 {
   display: none;
@@ -672,21 +684,6 @@
     display: none;
   }
 
-  .first {
-    background: url("images/firstback.png");
-    border: 1px solid #000;
-  }
-
-  .first h3,
-  .first p,
-  .first ul {
-    display: none;
-  }
-
-  .first .access_button {
-    display: block;
-  }
-
   .second,
   .fifth {
     background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url("images/secondback.png");
@@ -716,12 +713,13 @@
     margin: 24px 16px 0 16px;
   }
 
+  .first h3,
   .fourth h3 {
     display: block;
     margin: 24px 16px 0 16px;
     width: 337px;
     height: 81px;
-  }
+}
 
   .third,
   .sixth {
@@ -731,6 +729,23 @@
   .third h4,
   .sixth h4 {
     height: 38px;
+  }
+
+  .second_card:hover {
+    transform: scale(1.03);
+    background: url("images/firstback.png");
+    transition-duration: 250ms;
+  }
+
+  .second_card:hover h3,
+  .second_card:hover h4,
+  .second_card:hover p,
+  .second_card:hover .languages {
+    display: none;
+  }
+
+  .second_card:hover .access_button {
+    display: block;
   }
 
   .popup_desktop h2 {
@@ -821,7 +836,7 @@
   color: #f4f5f7;
 }
 
-.about .access_button {
+.about .resume {
   width: 161px;
   height: 48px;
   margin: 24px 190px 0 24px;
@@ -925,7 +940,7 @@
     margin: 0 732px 24px 142px;
   }
 
-  .about .access_button {
+  .about .resume {
     margin: 0 0 139px 142px;
   }
 
